--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -1,1 +1,5 @@
+{% extends 'base.html' %}
+{% block title %} Welcome | {% endblock title %}
+{% block content %}
 <h1>Front Page</h1>
+{% endblock content %}
