--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 {% block title %} Welcome | {% endblock title %}
 {% block content %}
-<h1>Front Page</h1>
+<div class="columns is-multiline mb-4">
+    <div class="column is-12 has-text-centered mt-6 mb-6">
+
+        <h2 class="is-size-3">Newest Products</h2>
+    </div>
+    {% for product in newest_products %} 
+    {% include 'products/parts/list_item.html' %}
+    {% endfor %}
+</div>
 {% endblock content %}
