--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,11 +1,7 @@
+{% extends 'core/base.html' %}
 
-{% extends 'base.html' %}
-
-{% block title %} Contact | {% endblock title %}
+{% block title %}Contact | {% endblock %}
 
 {% block content %}
-
-<h1> Contact </h1>
-
-
-{% endblock content %}
+    <h1>Contact</h1>
+{% endblock %}
