--- a/product/templates/products/product.html
+++ b/product/templates/products/product.html
@@ -1,30 +1,31 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
+
+{% block title %}{{ product.title }} | {% endblock %}
 
 {% block content %}
-{% if product.image %}
+    {% if product.image %}
+        <figure class="image is-4by3 mb-6">
+            <img src="{{ product.image.url }}">
+        </figure>
+    {% endif %}
 
-<figure class="image is-4by3 mb-6">
-    <img src="{{ product.image.url }}" alt="">
-</figure>
+    <h1 class="title">{{ product.title }}, ${{ product.price }}</h1>
 
-<h1 class="title"> {{ product.title }}, ${{ product.price }}</h1>
+    <p class="mb-6"><span class="tag is-dark">{{ product.vendor.name }}</span></p>
 
-<p class="mb-6 "> <span class="tag is-dark"> {{ product.vendor.name }}</span></p>
+    <p>{{ product.description }}</p>
 
-<p>{{ product.description }}</p>
+    {% if similar_products %}
+        <hr>
 
-{% if similar_products %}
+        <div class="columns is-multiline">
+            <div class="column is-12">
+                <h2 class="subtitle">Similar products</h2>
+            </div>
 
-<hr>
-
-<div class="columns is-mulitline">
-    <div class="column is-12">
-        <h2 class="subtitle"> Similar Products</h2>
-    </div>
-
-    {% for product in similar_products %}
-    {% include 'products/parts/list_item.html' %}
-    {% endfor %}
-</div> 
-{% endif %}
-{% endblock content %}
+            {% for product in similar_products %}
+                {% include 'product/parts/list_item.html' %}
+            {% endfor %}
+        </div>
+    {% endif %}
+{% endblock %}
