--- a/templates/base.html
+++ b/templates/base.html
@@ -1,48 +1,73 @@
 {% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title %}Interiorshop</title>
-    <link rel="stylesheet" href="{% static 'styles/main.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <script src="{% static 'scripts/main.js' %}"></script>
-</head>
 
-<body>
-    
-    <nav class="navbar is-dark">
-        <div class="navbar-brand">
-            <a href="/" class="navbar-item"><strong>Interiorshop</strong></a>
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="main-navbar">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-            </a>
-        </div>
-        <div class="navbar-menu" id="main-navbar">
-            <div class="navbar-end">
-        <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
+        <title>{% block title %}{% endblock %}Interiorshop</title>
+
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+        <link rel="stylesheet" href="{% static 'styles/main.css' %}">
+
+        <script src="{% static 'scripts/main.js' %}"></script>
+    </head>
+
+    <body>
+        <nav class="navbar is-dark">
+            <div class="navbar-brand">
+                <a href="/" class="navbar-item"><strong>Interiorshop</strong></a>
+        
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="main-navbar">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
             </div>
-        </div>
-    </nav>
-    <section class="section">
-        <div class="container">
-           
-            {% block content %}{% endblock content %}
-        </div>
-    </section>
+        
+            <div class="navbar-menu" id="main-navbar">
+                <div class="navbar-start">
+                    <div class="navbar-item">
+                        <form method="get" action="{% url 'search' %}">
+                            <div class="field has-addons">
+                                <div class="control">
+                                    <input type="text" class="input" placeholder="Search..." name="query">
+                                </div>
+                                <div class="control">
+                                    <button class="button is-dark is-uppercase">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
 
-    <footer class="footer">
-        <h3 class="is-size-4 mb-4">Interiorshop</h3>
-         {% if request.user.is_authenticated %}
-         <a href="{% url 'vendor_admin' %}">vendor admin</a>
-        {% else %}
-        <a href="{% url 'become_vendor' %}">Become Vendor</a>
-        {% endif %}
-    </footer>
-</body>
+                <div class="navbar-end">
+                    {% for category in menu_categories %}
+                        <a href="{% url 'category' category.slug %}" class="navbar-item">{{ category.title }}</a>
+                    {% endfor %}
+
+                    <a href="{% url 'contact' %}" class="navbar-item">Contact</a>
+                </div>
+            </div>
+        </nav>
+
+        <section class="section">
+            <div class="container">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </section>
+        
+        <footer class="footer">
+            <h3 class="is-size-4 mb-4">Interiorshop</h3>
+        
+            {% if request.user.is_authenticated %}
+                <a href="{% url 'vendor_admin' %}">Vendor admin</a>
+            {% else %}
+                <a href="{% url 'become_vendor' %}">Become vendor</a>
+            {% endif %}
+        </footer>
+    </body>
 </html>
